Update Gyakko 2025 report: rename Mizuki and refine Madono details

--- a/gyakko_bonenkai_2025/index.html
+++ b/gyakko_bonenkai_2025/index.html
@@ -204,12 +204,13 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>hibi（マッチ型アロマ）</strong><br>「デザインのアイデアに行き詰まった時に使ってほしい」と、自身が欲しかったものをセレクト。</li>
+                        <strong>hibi（マッチ型アロマ）</strong><br>「デザインのアイデアに行き詰まった時に使ってほしい」と、自身が欲しかったものをセレクト。
+                    </li>
                 </ul>
             </div>
 
             <div class="person">
-                <span class="person-name">佐々木 美月</span>
+                <span class="person-name">越智 美月</span>
                 <span class="person-role">株式会社逆光</span>
                 <ul>
                     <li><strong>【エピソード】</strong>:
@@ -233,7 +234,8 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>「あずきのチカラ（目元用）」</strong><br>「デジタル作業で疲れた目を癒やしてほしい。レンチンすると一瞬で寝れます」という実体験に基づく「ガチ」なケア用品。</li>
+                        <strong>「あずきのチカラ（目元用）」</strong><br>「デジタル作業で疲れた目を癒やしてほしい。レンチンすると一瞬で寝れます」という実体験に基づく「ガチ」なケア用品。
+                    </li>
                 </ul>
             </div>
 
@@ -247,7 +249,7 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>: <strong>PAPIER
-                            D'ARMENIE（紙のお香）</strong><br>「社長が言うセンス」として選ばれた一品。</li>
+                            D'ARMENIE（紙のお香）</strong><br>「センス」を最重要視して選ばれた、間違いのない一品。</li>
                 </ul>
             </div>
 
@@ -277,7 +279,8 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>Aesop（ハンドクリーム等）</strong><br>「逆光の集まりにはおしゃれな人しか来ないだろう」と予測し、「大人の豊かさ」をテーマに選定。</li>
+                        <strong>Aesop（ハンドクリーム等）</strong><br>「逆光の集まりにはおしゃれな人しか来ないだろう」と予測し、「大人の豊かさ」をテーマに選定。
+                    </li>
                 </ul>
             </div>
 
@@ -293,7 +296,8 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>紅茶の詰め合わせ</strong><br>本通りの紅茶専門店でセレクト。「色んなフレーバーが入っていて長く楽しめる」気配りの品。</li>
+                        <strong>紅茶の詰め合わせ</strong><br>本通りの紅茶専門店でセレクト。「色んなフレーバーが入っていて長く楽しめる」気配りの品。
+                    </li>
                 </ul>
             </div>
 
@@ -326,7 +330,8 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>カンボジアの生胡椒（塩漬け）</strong><br>「卵かけご飯に乗せると絶品。お酒のアテにもなる」。知人が扱っているこだわりの逸品。</li>
+                        <strong>カンボジアの生胡椒（塩漬け）</strong><br>「卵かけご飯に乗せると絶品。お酒のアテにもなる」。知人が扱っているこだわりの逸品。
+                    </li>
                 </ul>
             </div>
 
@@ -360,7 +365,8 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>ハンドソープ（オートディスペンサー）</strong><br>「自分じゃ買わないけどあったら嬉しい」枠。</li>
+                        <strong>ハンドソープ（オートディスペンサー）</strong><br>「自分じゃ買わないけどあったら嬉しい」枠。
+                    </li>
                 </ul>
             </div>
 
@@ -376,7 +382,8 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>倉敷帆布の小物</strong><br>「通販にはない、現地でしか買えない、在庫限りのレア物」。</li>
+                        <strong>倉敷帆布の小物</strong><br>「通販にはない、現地でしか買えない、在庫限りのレア物」。
+                    </li>
                 </ul>
             </div>
 
@@ -391,7 +398,8 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>こだわりスイーツ</strong><br>「僕に刺さりすぎて家に何十個もストックがある」という激推しスイーツ。</li>
+                        <strong>こだわりスイーツ</strong><br>「僕に刺さりすぎて家に何十個もストックがある」という激推しスイーツ。
+                    </li>
                 </ul>
             </div>
 
@@ -422,7 +430,8 @@
                         </ul>
                     </li>
                     <li class="present-section"><strong>【プレゼント】</strong>:
-                        <strong>非公式「逆光スウェット」</strong><br>勝手に逆光ロゴを入れた世界に一つのスウェット。</li>
+                        <strong>非公式「逆光スウェット」</strong><br>勝手に逆光ロゴを入れた世界に一つのスウェット。
+                    </li>
                 </ul>
             </div>
         </section>
