feat: add chibi kaiju monster and style refinements

--- a/monster-collection/index.html
+++ b/monster-collection/index.html
@@ -17,13 +17,10 @@
 
         <div id="ui-layer">
             <div id="collection-status">
-                <h2>Collection <span id="count">0</span>/5</h2>
+                <h2>Collection <span id="count">0</span>/1</h2>
                 <div class="slots">
-                    <div class="slot" data-type="fire"><img src="assets/monster_fire.png" alt="???"></div>
-                    <div class="slot" data-type="water"><img src="assets/monster_water.png" alt="???"></div>
-                    <div class="slot" data-type="grass"><img src="assets/monster_grass.png" alt="???"></div>
-                    <div class="slot" data-type="electric"><img src="assets/monster_electric.png" alt="???"></div>
-                    <div class="slot" data-type="psychic"><img src="assets/monster_psychic.png" alt="???"></div>
+                    <div class="slot" data-type="chibikaiju"><img src="assets/monster_chibikaiju.png" alt="Chibi Kaiju">
+                    </div>
                 </div>
             </div>
 
