--- a/monster-collection/index.html
+++ b/monster-collection/index.html
@@ -17,10 +17,11 @@
 
         <div id="ui-layer">
             <div id="collection-status">
-                <h2>Collection <span id="count">0</span>/1</h2>
+                <h2>Collection <span id="count">0</span>/2</h2>
                 <div class="slots">
                     <div class="slot" data-type="chibikaiju"><img src="assets/monster_chibikaiju.png" alt="Chibi Kaiju">
                     </div>
+                    <div class="slot" data-type="teoku"><img src="assets/monster_teoku.png" alt="Teoku"></div>
                 </div>
             </div>
 
