feat: add speed control slider

--- a/monster-collection/index.html
+++ b/monster-collection/index.html
@@ -18,6 +18,10 @@
         <div id="ui-layer">
             <div id="collection-status">
                 <h2>Collection <span id="count">0</span>/3</h2>
+                <div id="controls">
+                    <label for="speed-slider">Speed</label>
+                    <input type="range" id="speed-slider" min="1" max="50" value="4">
+                </div>
                 <div class="slots">
                     <div class="slot" data-type="chibikaiju"><img src="assets/monster_chibikaiju.png" alt="Chibi Kaiju">
                     </div>
