Optimize self-PR text in resume

--- a/resume/index.html
+++ b/resume/index.html
@@ -168,7 +168,7 @@
             <div style="font-size: 10pt; line-height: 1.4;">
                 <span class="u-bold">【志望動機】</span><br>
                 地元広島で「人材育成」に深く貢献されている貴社の事業に魅力を感じ、応募いたしました。
-                これまでフィットネス、音楽、ビジネス研修（リクルート）と、9年間にわたり様々な分野で「講師」として活動してきました。一貫して「相手の可能性を引き出し、成長をサポートする」ことに情熱を注いでおり、貴社の一員として中国地方の働く人々のスキルアップに貢献したいと強く願っています。<br>
+                これまでフィットネス、音楽、ビジネス研修と、合計9年間にわたり様々な分野で「講師」として活動してきました。一貫して「相手の可能性を引き出し、成長をサポートする」ことに情熱を注いでおり、貴社の一員として中国地方の働く人々のスキルアップに貢献したいと強く願っています。<br>
                 <br>
                 <span class="u-bold">【自己PR】</span><br>
                 強みは「伝える力」と「場を動かす力」です。ナレーターとしての「声の表現技術」と、ラジオ制作で培った「構成力」を活かし、感覚的になりがちなコミュニケーションスキルを論理的かつ実践的に指導できます。また、フィットネスインストラクターの経験から、受講者を巻き込んで熱量を高める「参加型」の研修運営が得意です。即戦力として貢献いたします。
