fix: Use absolute paths /pinot_wine/ for consistent deployment

--- a/pinot_wine/wines/engel_orange.html
+++ b/pinot_wine/wines/engel_orange.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Engel Orange in Alsace POP</title>
     <!-- Sharing the same stylesheet for consistent branding -->
-    <link rel="stylesheet" href="../style.css">
+    <link rel="stylesheet" href="/pinot_wine/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -40,7 +40,7 @@
         <!-- Visual Layer API (Bottle) -->
         <div class="visual-layer">
             <div class="bottle-wrapper">
-                <img src="../assets/engel_orange_bottle.png" alt="Engel Orange" class="bottle-img">
+                <img src="/pinot_wine/assets/engel_orange_bottle.png" alt="Engel Orange" class="bottle-img">
             </div>
         </div>
 
@@ -99,7 +99,7 @@
             <!-- Sommelier Section -->
             <section class="sommelier-section">
                 <div class="kenken-profile">
-                    <img src="../assets/kenken.png" alt="Kenken" class="kenken-img">
+                    <img src="/pinot_wine/assets/kenken.png" alt="Kenken" class="kenken-img">
                     <div class="kenken-name">Sommelier Kenken</div>
                 </div>
                 <div class="kenken-quote">
@@ -114,7 +114,7 @@
 
             <!-- Footer Logo -->
             <footer class="pop-footer">
-                <img src="../assets/logo_pinot_nagayama.png" alt="Pinot x Nagayama">
+                <img src="/pinot_wine/assets/logo_pinot_nagayama.png" alt="Pinot x Nagayama">
             </footer>
 
         </div>
