--- a/pinot_wine/wines/montdomaine_sb.html
+++ b/pinot_wine/wines/montdomaine_sb.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Montdomaine Touraine Blanc Callipyge POP</title>
     <!-- Sharing the same stylesheet for consistent branding -->
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/pinot_wine/style.css">
 </head>
 
 <body>
@@ -36,7 +36,8 @@
         <div class="visual-layer">
             <div class="bottle-wrapper">
                 <!-- Reverting to original Montdomaine SB bottle image -->
-                <img src="../assets/montdomaine_sb_bottle.png" alt="Montdomaine Sauvignon Blanc" class="bottle-img">
+                <img src="/pinot_wine/assets/montdomaine_sb_bottle.png" alt="Montdomaine Sauvignon Blanc"
+                    class="bottle-img">
             </div>
         </div>
 
@@ -95,7 +96,7 @@
             <!-- Sommelier Section -->
             <section class="sommelier-section">
                 <div class="kenken-profile">
-                    <img src="../assets/kenken.png" alt="Kenken" class="kenken-img">
+                    <img src="/pinot_wine/assets/kenken.png" alt="Kenken" class="kenken-img">
                     <div class="kenken-name">Sommelier Kenken</div>
                 </div>
                 <div class="kenken-quote">
@@ -110,7 +111,7 @@
 
             <!-- Footer Logo -->
             <footer class="pop-footer">
-                <img src="../assets/logo_pinot_nagayama.png" alt="Pinot x Nagayama">
+                <img src="/pinot_wine/assets/logo_pinot_nagayama.png" alt="Pinot x Nagayama">
             </footer>
 
         </div>
