--- a/pinot_wine/wines/pedestal_chardonnay.html
+++ b/pinot_wine/wines/pedestal_chardonnay.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Pedestal Margaret River Chardonnay POP</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/pinot_wine/style.css">
 </head>
 
 <body>
@@ -34,7 +34,8 @@
         <!-- Visual Layer (Bottle) -->
         <div class="visual-layer">
             <div class="bottle-wrapper">
-                <img src="../assets/pedestal_chardonnay_bottle_clean.png" alt="Pedestal Chardonnay" class="bottle-img">
+                <img src="/pinot_wine/assets/pedestal_chardonnay_bottle_clean.png" alt="Pedestal Chardonnay"
+                    class="bottle-img">
             </div>
         </div>
 
@@ -97,7 +98,7 @@
             <!-- Sommelier Section -->
             <section class="sommelier-section">
                 <div class="kenken-profile">
-                    <img src="../assets/kenken.png" alt="Kenken" class="kenken-img">
+                    <img src="/pinot_wine/assets/kenken.png" alt="Kenken" class="kenken-img">
                     <div class="kenken-name">Sommelier Kenken</div>
                 </div>
                 <div class="kenken-quote">
@@ -114,7 +115,7 @@
 
             <!-- Footer Logo -->
             <footer class="pop-footer">
-                <img src="../assets/logo_pinot_nagayama.png" alt="Pinot x Nagayama">
+                <img src="/pinot_wine/assets/logo_pinot_nagayama.png" alt="Pinot x Nagayama">
             </footer>
 
         </div>
